refactor: Goods도메인 코드 리팩토링
- 엔티티 생성자 엑세스 제한
- 필수 속성 NotNull 추가
- API response DTO로 수정
- Request/Response DTO from메소드 구현
- 상품 리스트 메소드 카테고리 조회 로직 수정