@@ -1,6 +1,7 @@
 package com._pi.benepick.domain.goods.service;
 
 import com._pi.benepick.domain.categories.entity.Categories;
+import com._pi.benepick.domain.goods.dto.GoodsResponse.GoodsSeedsResponseDTO;
 import com._pi.benepick.domain.goodsCategories.entity.GoodsCategories;
 import com._pi.benepick.domain.goods.dto.GoodsResponse;
 import com._pi.benepick.domain.goods.entity.Goods;
@@ -48,38 +49,21 @@ public class GoodsQueryServiceImpl implements GoodsQueryService{
     }
 
     // 상품 목록 조회
-    public List<GoodsResponse.GoodsResponseDTO> getGoodsList() {
+    public GoodsResponse.GoodsListResponseDTO getGoodsList() {
         List<Goods> goodsList = goodsRepository.findAll();
 
-        Map<Long, Long> goodsCategoryMap = goodsCategoriesRepository.findAll().stream()
-                .collect(Collectors.toMap(
-                    goodsCategories -> goodsCategories.getGoodsId().getId(),
-                    goodsCategories -> goodsCategories.getCategoryId().getId()
-                ));
+        Map<Long, GoodsCategories> goodsCategoryMap = goodsCategoriesRepository.findAll().stream()
+                .collect(Collectors.toMap(goodsCategories -> goodsCategories.getGoodsId().getId(), goodsCategories -> goodsCategories));
 
-        Map<Long, String> categoriesMap = categoriesRepository.findAll().stream()
-                .collect(Collectors.toMap(Categories::getId, Categories::getName));
-
-        return goodsList.stream()
-                .map(goods -> GoodsResponse.GoodsResponseDTO.builder()
-                        .id(goods.getId())
-                        .name(goods.getName())
-                        .amounts(goods.getAmounts())
-                        .image(goods.getImage())
-                        .description(goods.getDescription())
-                        .goodsStatus(String.valueOf(goods.getGoodsStatus()))
-                        .price(goods.getPrice())
-                        .discountPrice(goods.getDiscountPrice())
-                        .raffleStartAt(goods.getRaffleStartAt())
-                        .raffleEndAt(goods.getRaffleEndAt())
-                        .category(categoriesMap.get(goodsCategoryMap.get(goods.getId())))
-                        .build())
-                .collect(Collectors.toList());
+        return GoodsResponse.GoodsListResponseDTO.builder()
+            .goodsDTOList(goodsList.stream().map(goods -> GoodsResponse.GoodsResponseDTO.from(goods,
+                goodsCategoryMap.get(goods.getId()).getCategoryId().getName())).toList())
+            .build();
     }
 
     //시드 값 조회
-    public String getSeeds(Long goodsId) {
+    public GoodsResponse.GoodsSeedsResponseDTO getSeeds(Long goodsId) {
         Goods goods = goodsRepository.findById(goodsId).orElseThrow(() -> new ApiException(ErrorStatus._GOODS_NOT_FOUND));
-        return goods.getSeeds();
+        return GoodsSeedsResponseDTO.from(goods);
     }
 }
